# adif-manage

./: AGENTS.md  README.md  flake.nix  pyproject.toml  pyrightconfig.json
src/adif_manage/: __main__.py  adif_codec.py  cli.py  commands.py  errors.py  models.py  record_flow.py  storage.py
tests/: test_adif_codec.py  test_command_parsing.py  test_integration_cli.py  test_record_flow.py
